--- a/sampa/index.html
+++ b/sampa/index.html
@@ -190,7 +190,7 @@
     </div>
 
     <footer>
-        <h3>&copy; I love my city</h3>
+        <h3>&copy; AJEdelmann Web Development</h3>
     </footer>
 </body>
 
