added favicon and updated style

--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -3,30 +3,34 @@
   <head>
     <meta charset="utf-8">
     <title>Portfolio - AJEdelmann</title>
+    <meta name="description" content="What do I do and how did I get here?">
+    <meta name="keywords" content="artworks, we companies, jr. web developer">
+    <meta name="author" content="Albert Edelmann">
   <!--  Explicar pq utilizei o normalize -->
     <link rel="stylesheet" type="text/css" href="css/reset-normalize.css" />
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/responsive.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Open+Sans+Condensed:300|Roboto|Roboto+Condensed" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/favicon .ico" type="image/x-icon">
   </head>
   <body>
-      <header>
-        <div class="linha">
-          <div class="col12">
-            <nav>
-              <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-                <li><a href="skills.html">SKILLS</a></li>
-                <li><a href="portfolio.html">PORTFOLIO</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-              </ul>
-            </nav>
-          </div>
+    <div class="linha">
+      <header class="header">
+        <div class="col12">
+          <nav>
+            <ul>
+              <li><a href="index.html">HOME</a></li>
+              <li><a href="about.html">ABOUT</a></li>
+              <li><a href="skills.html">SKILLS</a></li>
+              <li><a href="portfolio.html">PORTFOLIO</a></li>
+              <li><a href="contact.html">CONTACT</a></li>
+            </ul>
+          </nav>
         </div>
-      </header>
-    <hr>
+        <hr>
+     </header>
+    </div>
 
     <div class="myabout">
       <div class="linha">
@@ -34,7 +38,7 @@
           <h2 class="myh2">What do I do exactly?</h2>
           <h4 class="myh4">
             For businesses, I create all sorts of artworks: websites, apps, ads, identities, documents,…<br>
-  For web companies I can work as a Jr. Wed Developer, helping on user experiences, user interfaces, code development and production.
+  For web companies I can work as a Jr. Web Developer, helping on user experiences, user interfaces, code development and production.
           </h4>
         </div>
       </div>
@@ -51,24 +55,24 @@
 </span>
         </div>
       </div>
-    </div>
 
-    <div class="footer">
-      <div class="linha">
+
+    <div class="linha">
+     <div class="footer">
         <footer>
-          <div class="coluna col4 myprivacy">
-            <span class="myprivacy"><a href="privacy.html">Privacy</a></span>
-          </div>
-          <div class="coluna col4 copy">
-            <p>&copy 2019 - AJEdelmann Web Development</p>
-            <a href="https://www.instagram.com/albert_toti/" rel="external" target="_blank"><img src="img/instaicon1.png" alt="instagram" class="myinsta"></a>
-          </div>
           <div class="coluna col4 mycv">
-            <span><a href="albert-edelmann-cv.pdf">Print a<br>resume</a></span>
-          </div>
-        </footer>
+            <span><a href="albert-edelmann-cv.pdf">Print a resume</a></span>
+            </div>
+            <div class="coluna col4 copy">
+              <p>&copy 2019 - AJEdelmann Web Development</p>
+              <a href="https://www.instagram.com/albert_toti/" rel="external" target="_blank"><img src="img/instaicon1.png" alt="instagram" class="myinsta"></a>
+            </div>
+            <div class="coluna col4 myprivacy">
+            <span class="myprivacy"><a href="privacy.html">Privacy policy</a></span>
+            </div>
+          </footer>
+        </div>
       </div>
     </div>
-
   </body>
 </html>
