--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
 <head>
   <meta charset="utf-8">
   <title>Portfolio - AJEdelmann</title>
-  <!--  Explicar pq utilizei o normalize -->
+  <meta name="description" content="Web Developer Portfolio">
+  <meta name="keywords" content="Berlin, Digital Career Institute, Skills, Frontend, Backend, Full Stack">
+  <meta name="author" content="Albert Edelmann">
   <link rel="stylesheet" type="text/css" href="css/reset-normalize.css" />
   <link href="css/style.css" rel="stylesheet">
+  <link href="css/responsive.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Open+Sans+Condensed:300|Roboto|Roboto+Condensed"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Open+Sans+Condensed:300|Roboto|Roboto+Condensed" rel="stylesheet">
   <link rel="shortcut icon" href="img/favicon .ico" type="image/x-icon">
 </head>
 
 <body>
-  <header class="header">
-    <div class="linha">
+  <div class="linha">
+    <header class="header">
       <div class="col12">
         <nav>
           <ul>
@@ -27,40 +28,36 @@
           </ul>
         </nav>
       </div>
-    </div>
-  </header>
-  <hr>
+      <hr>
+    </header>
+  </div>
 
-  <div class="linha">
+  <div class="linha home">
     <div class="coluna col4 mytext">
-      <h1 id="myname"><span>A</span>LB<span>ERT</span> J.<br><span class="edel">EDE<span class="lm">LM</span>ANN</span>
-      </h1>
-      <p class="mywebdev">Web Developer</p>
-      <p class="myberlin">based in Berlin, Germany</p>
+      <h1 id="myname"><span>A</span>LB<span>ERT</span> J.<br><span class="edel">EDE<span class="lm">LM</span>ANN</span></h1>
+      <h2 class="mywebdev">Web Developer</h2>
+      <h3 class="myberlin">based in Berlin, Germany</h3>
     </div>
     <div class="coluna col8">
       <img src="img/totizeke.png" class="myphoto">
     </div>
   </div>
 
-  <div class="footer">
-    <div class="linha">
+  <div class="linha">
+    <div class="footer">
       <footer>
-        <div class="coluna col4 myprivacy">
-          <span class="myprivacy"><a href="privacy.html">Privacy</a></span>
+        <div class="coluna col4 mycv">
+          <span><a href="albert-edelmann-cv.pdf">Print a resume</a></span>
         </div>
         <div class="coluna col4 copy">
           <p>&copy 2019 - AJEdelmann Web Development</p>
-          <a href="https://www.instagram.com/albert_toti/" rel="external" target="_blank"><img src="img/instaicon1.png"
-              alt="instagram" class="myinsta"></a>
+          <a href="https://www.instagram.com/albert_toti/" rel="external" target="_blank"><img src="img/instaicon1.png" alt="instagram" class="myinsta"></a>
         </div>
-        <div class="coluna col4 mycv">
-          <span><a href="albert-edelmann-cv.pdf">Print a<br>resume</a></span>
+        <div class="coluna col4 myprivacy">
+          <span class="myprivacy"><a href="privacy.html">Privacy policy</a></span>
         </div>
       </footer>
     </div>
   </div>
-
 </body>
-
 </html>
