--- a/portfolio/skills.html
+++ b/portfolio/skills.html
@@ -3,64 +3,69 @@
   <head>
     <meta charset="utf-8">
     <title>Portfolio - AJEdelmann</title>
+    <meta name="description" content="Web Developer Skills">
+    <meta name="keywords" content="Work experience, Skills, Digital Career Institute, Goals">
+    <meta name="author" content="Albert Edelmann">
   <!--  Explicar pq utilizei o normalize -->
     <link rel="stylesheet" type="text/css" href="css/reset-normalize.css" />
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/responsive.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Open+Sans+Condensed:300|Roboto|Roboto+Condensed" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/favicon .ico" type="image/x-icon">
   </head>
+
   <body>
+    <div class="linha">
       <header class="header">
-        <div class="linha">
-          <div class="col12">
-            <nav>
-              <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-                <li><a href="skills.html">SKILLS</a></li>
-                <li><a href="portfolio.html">PORTFOLIO</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-              </ul>
-            </nav>
-          </div>
+        <div class="col12">
+          <nav>
+            <ul>
+              <li><a href="index.html">HOME</a></li>
+              <li><a href="about.html">ABOUT</a></li>
+              <li><a href="skills.html">SKILLS</a></li>
+              <li><a href="portfolio.html">PORTFOLIO</a></li>
+              <li><a href="contact.html">CONTACT</a></li>
+            </ul>
+          </nav>
         </div>
-      </header>
-    <hr>
+        <hr>
+     </header>
+    </div>
+
     <div class="myskills">
       <div class="linha">
         <div class="coluna col4 myknowledge" >
-          <h2>Skills</h2>
+          <h2 class="myh2skill">Skills</h2>
           <ul>
-            <li>HTML</li>
+            <li class="myliskill">HTML</li>
             <div id="bar">
               <div id="fill">
-                <p class="procent">65%</p>
+                <p class="procent">45%</p>
               </div>
             </div>
             <br>
-            <li>CSS</li>
+            <li class="myliskill">CSS</li>
             <div id="bar">
               <div id="fill1">
-                <p class="procent">70%</p>
+                <p class="procent">45%</p>
               </div>
             </div>
             <br>
-            <li>JavaScript</li>
+            <li class="myliskill">JavaScript</li>
             <div id="bar">
               <div id="fill2">
-                <p class="procent">10%</p>
+                <p class="procent">5%</p>
               </div>
             </div>
             <br>
-            <li>Project Management</li>
+            <li class="myliskill">Project Management</li>
             <div id="bar">
               <div id="fill3">
                 <p class="procent">90%</p>
               </div>
             </div>
             <br>
-            <li>MS Office</li>
+            <li class="myliskill">MS Office</li>
             <div id="bar">
               <div id="fill4">
                 <p class="procent">90%</p>
@@ -68,30 +73,30 @@
             </div>
             <br>
           </ul>
-          <h2>Languages</h2>
+          <h2 class="myh2skill">Languages</h2>
           <ul>
-            <li>Englisch</li>
+            <li class="myliskill">Englisch</li>
             <div id="bar">
               <div id="fill5">
                 <p class="procent">80%</p>
               </div>
             </div>
             <br>
-            <li>German</li>
+            <li class="myliskill">German</li>
             <div id="bar">
               <div id="fill6">
                 <p class="procent">45%</p>
               </div>
             </div>
             <br>
-            <li>Portuguese</li>
+            <li class="myliskill">Portuguese</li>
             <div id="bar">
               <div id="fill7">
                 <p class="procent">100%</p>
               </div>
             </div>
             <br>
-            <li>Spanisch</li>
+            <li class="myliskill">Spanisch</li>
             <div id="bar">
               <div id="fill8">
                 <p class="procent">95%</p>
@@ -99,18 +104,18 @@
             </div>
             <br>
           </ul>
-          <h2>Other Skills</h2>
+          <h2 class="myh2skill">Other Skills</h2>
           <ul>
-            <li>Team working</li>
+            <li class="myliskill">Team working</li>
             <br>
-            <li>Target oriented</li>
+            <li class="myliskill">Target oriented</li>
             <br>
-            <li>Proactivity</li>
+            <li class="myliskill">Proactivity</li>
             <br>
           </ul>
 
-          <h2>Skills goals in 2019</h2>
-          <table>
+          <h2 class="myh2skill">Skills goals in 2019</h2>
+          <table id="mytable">
             <tr>
               <th>Time Frame</th>
               <th>Subject</th>
@@ -148,27 +153,27 @@
         </div>
 
         <div class="coluna col7 myexperience" >
-          <h2>Work Experience</h2>
+          <h2 class="myh2skill">Work Experience</h2>
           <ul>
-            <li>Counsultant Engineer - <a href="https://www.sgs.co.uk/">SGS UK.</a></li>
+            <li class="myliskill">Counsultant Engineer - <a href="https://www.sgs.co.uk/">SGS UK.</a></li>
             <span class="date">2016 - 2018</span>
             <br>
             <span class="underline">Main Role</span><br>
-            <span>
+            <span class="myspanskill">
               As a Consultant Engineer, he oversees, follow-up and testify the quality tests of equipments and materials on behalf of his customers.
             </span>
             <br><br>
             <span class="underline">Highlights</span><br>
-            <span>
+            <span class="myspanskill">
             - improved technical skills;<br>
             - improved critical analysis;
            </span>
            <br><br>
-            <li>Project Manager - <a href="https://www.hatch.com/">Hatch Co.</a></li>
+            <li class="myliskill">Project Manager - <a href="https://www.hatch.com/">Hatch Co.</a></li>
             <span class="date">2012 - 2016</span>
             <br>
             <span class="underline">Main Role</span><br>
-            <span>
+            <span class="myspanskill">
               As a Project Manager he was responsible for many activities, such as: <br>
               - leading technical negotiations with suppliers in order to minimize costs impacts and ensure project specifications are included in the contract;<br>
               - issue and release Technical Specifications, Histogram and Working Plan to start contract process with third part inspection agencies;<br>
@@ -176,73 +181,52 @@
             </span>
             <br><br>
             <span class="underline">Highlights</span><br>
-            <span>
+            <span class="myspanskill">
               - improved management skills;<br>
               - improved negotiation skills;<br>
               - improved critical analysis; <br>
               - improved communication skills;<br>
             </span>
             <br>
-            <li>Production Engineer - <a href="https://camargocorreainfra.com/">Camargo Correa S/A</a></li>
+            <li class="myliskill">Production Engineer - <a href="https://camargocorreainfra.com/">Camargo Correa S/A</a></li>
             <span class="date">2007 - 2012</span>
             <br>
             <span class="underline">Main Role</span><br>
-            <span>
+            <span class="myspanskill">
             During 5 years of work on this Brazilian multinational company, he was involved in 3 major Projects:</span> <br>
-            <span  class="date">2010 to 2012 - RNEST PETROBRAS (Petroleum Refinery Construction)</span>;<br>
-            <span class="underline">Main Role</span><br>
-            <span>For this project he worked on Procurement department, performing monthly Expediting visits at supplier shops all around the world in order to ensure the contract terms.</span><br>
-            <br>
-            <span class="underline">Highlights</span><br>
-            <span>- improve Management, Negotiation and Technical skills.</span><br>
-            <br>
-            <span class="date">2009 to 2010 - Corporative office (Planning department);</span><br>
-            <span class="underline">Main Role</span><br>
-            <span>During his period on Planning department his main roles were creating KPI's in order to support several Management strategic decisions, such as:<br>
-              - purchase of comodities, equipments and materials to support all the Projects managed by the company;<br>
-              - monitorate project teams performances; among others.</span><br>
-              <br>
-            <span class="underline">Highlights</span><br>
-            <span>- improve Comunication, Management, MS Office and SAP skills.</span><br>
-            <br>
-            <span class="date">2007 to 2009 - ALUMAR ALCOA (Alluminium Refinery Expansion);</span><br>
-            <span class="underline">Main Role</span><br>
-            <span>On this project he worked as a SAP and MARIAN Data entry</span><br><br>
-            <span class="underline">Highlights</span><br>
-            <span>- Acquire SAP and MARIAN skills<br>
-            - improve comunication and time management skills.</span>
+            <span class="myspanskill">2010 to 2012 - RNEST PETROBRAS (Petroleum Refinery Construction)</span>;<br>
+            <span class="myspanskill">2009 to 2010 - UIGE (Energy Transmission Line Construction);</span><br>
+            <span class="myspanskill">2007 to 2009 - ALUMAR ALCOA (Alluminium Refinery Expansion);</span><br>
         </div>
 
         <div class="coluna col7 myeducation">
-          <h2>Education</h2>
+          <h2 class="myh2skill">Education</h2>
           <ul>
-            <li>Web Development Course - <a href="https://digitalcareerinstitute.org/">DCI Digital Career Institute</a> - Berlin</li>
+            <li class="myliskill">Web Development Course - <a href="https://digitalcareerinstitute.org/">DCI Digital Career Institute</a> - Berlin</li>
             <span class="date">2019 - Current</span><br><br>
-            <li>Production Engineering Degree - <a href="https://www.mackenzie.br/graduacao/sao-paulo-higienopolis/engenharia-de-producao/"> Mackenzie University</a> - Sao Paulo</li>
+            <li class="myliskill">Production Engineering Degree - <a href="https://www.mackenzie.br/graduacao/sao-paulo-higienopolis/engenharia-de-producao/"> Mackenzie University</a> - Sao Paulo</li>
             <span class="date">2002 - 2006</span>
             <br>
           </ul>
         </div>
-
       </div>
-    </div>
 
-    <div class="footer">
-      <div class="linha">
+    <div class="linha">
+      <div class="footer">
         <footer>
-          <div class="coluna col4 myprivacy">
-            <span class="myprivacy"><a href="privacy.html">Privacy</a></span>
+          <div class="coluna col4 mycv">
+            <span><a href="albert-edelmann-cv.pdf">Print a resume</a></span>
           </div>
           <div class="coluna col4 copy">
-            <p>&copy 2019 - AJEdelmann Web Development</p>
-            <a href="https://www.instagram.com/albert_toti/" rel="external" target="_blank"><img src="img/instaicon1.png" alt="instagram" class="myinsta"></a>
+              <p>&copy 2019 - AJEdelmann Web Development</p>
+              <a href="https://www.instagram.com/albert_toti/" rel="external" target="_blank"><img src="img/instaicon1.png" alt="instagram" class="myinsta"></a>
           </div>
-          <div class="coluna col4 mycv">
-            <span><a href="albert-edelmann-cv.pdf">Print a<br>resume</a></span>
+          <div class="coluna col4 myprivacy">
+            <span class="myprivacy"><a href="privacy.html">Privacy policy</a></span>
           </div>
         </footer>
+       </div>
       </div>
     </div>
-
   </body>
 </html>
