--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -3,122 +3,111 @@
   <head>
     <meta charset="utf-8">
     <title>Portfolio - AJEdelmann</title>
-  <!--  Explicar pq utilizei o normalize -->
+    <meta name="description" content="Contact Me">
+    <meta name="keywords" content="Get in contact, Contact Me">
+    <meta name="author" content="Albert Edelmann">
     <link rel="stylesheet" type="text/css" href="css/reset-normalize.css" />
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/responsive.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Open+Sans+Condensed:300|Roboto|Roboto+Condensed" rel="stylesheet">
-    <!--  Link to use Font fontawesome icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/favicon .ico" type="image/x-icon">
   </head>
   <body>
+    <div class="linha">
       <header class="header">
-        <div class="linha">
-          <div class="col12">
-            <nav>
-              <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-                <li><a href="skills.html">SKILLS</a></li>
-                <li><a href="portfolio.html">PORTFOLIO</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-              </ul>
-            </nav>
-          </div>
+        <div class="col12">
+          <nav>
+            <ul>
+              <li><a href="index.html">HOME</a></li>
+              <li><a href="about.html">ABOUT</a></li>
+              <li><a href="skills.html">SKILLS</a></li>
+              <li><a href="portfolio.html">PORTFOLIO</a></li>
+              <li><a href="contact.html">CONTACT</a></li>
+            </ul>
+          </nav>
         </div>
-      </header>
-    <hr>
+        <hr>
+     </header>
+    </div>
 
     <div class="mycontact">
       <div class="linha">
-        <div class="mygetintouch">
-          <h1>Get in touch</h1>
+        <div class=" coluna col12 mygetintouch">
+          <h1 id="myh1contact">Get in touch</h1>
           <p class="myinterest">I’m always interested in new opportunities, freelance work, and collaborations.<br>
-Message me if you'd like to work with me.
+            Message me if you'd like to work with me.
           </p>
-          </div>
+        </div>
+      </div>
+      <div class="linha">
+        <div class=" coluna col6 myicon">
+            <i class="fas fa-address-card" style="font-size:5em;padding-top:10px;"></i>
+        </div>
+        <div class=" coluna col6 mylists">
+          <ul class="mylists mydetails">
+            <li>Phone: +49 170 9812225</li>
+            <li>E-mail: albert.edelmann@gmail.com</li>
+            <li>Skype: albert.edelmann</li>
+          </ul>
+        </div>
       </div>
     </div>
 
-    <div class="linha truncate">
-      <section>
-        <div class="coluna col5 sidebar">
-         <div class="linha myinfo">
-            <div class="coluna col2 myicon">
-              <i class="fas fa-map-marker-alt" style="font-size:5em;padding-top:10px;"></i>
-            </div>
-            <div class="coluna col3 tofloat">
-            <ul class="mylists">
-              <li>Körnerstrasse, 19</li>
-              <li>13156 - Berlim</li>
-              <li>Alemanha</li>
-            </ul>
-            </div>
-           </div>
-           <div class="linha myinfo">
-            <div class="coluna col2 myicon">
-             <i class="fas fa-address-card" style="font-size:5em;padding-top:10px;"></i>
-            </div>
-            <div class="coluna col3 tofloat">
-              <ul class="mylists">
-                <li>Fone: +49 170 9812225</li>
-                <li>E-mail: albert.edelmann@gmail.com</li>
-                <li>Skype: albert.edelmann</li>
-              </ul>
-            </div>
-           </div>
-        </div>
-
-        <div class="coluna col7 contato">
+    <div class="mybrief">
+      <div class="linha">
+        <div class=" coluna col12">
+          <h2 class="myh2contact">Send me a message</h2>
           <form action="">
-          <p class="mybrief">Dear Albert,
-          <br><br>
-              My name is <input type="text" name="firstname" id="clientfirst" value="type your name"><br>
-              and I’m contacting you regarding a job<br>
-              for my
-  <select name="employer" class="employer">
-    <option value="company">company</option>
-    <option value="project">project</option>
-    <option value="brand">brand</option>
-    <option value="no one, really">no one, really</option>
-  </select>
-  <br>
+            <p class="mybrief">Dear Albert,
+            <br><br>
+                My name is <input type="text" name="firstname" class="cliententry" value="type your name"><br>
+                and I’m contacting you regarding a job<br>
+                for my
+            <select name="employer" class="cliententry">
+              <option value="company">company</option>
+              <option value="project">project</option>
+              <option value="brand">brand</option>
+              <option value="no one, really">no one, really</option>
+            </select>
+            <br>
               I would love if you could
-              <select name="contactme" class="contactme">
-                <option value="call me">call me</option>
-                <option value="project">send me an e-mail</option>
-                <option value="brand">come to my office</option>
-                <option value="no one, really">plan a Skype meeting</option>
-                <option value="no one, really">send me a smoke sign</option>
+            <select name="contactme" class="cliententry">
+              <option value="call me">call me</option>
+              <option value="project">send me an e-mail</option>
+              <option value="brand">come to my office</option>
+              <option value="no one, really">plan a Skype meeting</option>
+              <option value="no one, really">send me a smoke sign</option>
               </select>
-              <br>
+            <br>
                to discuss this further. <br>
-              A few more things you should know: <br>
-              <textarea name="msg" id="msg" rows="10"></textarea><br><br>
-              <input type="submit" class="botao" name="submit" value="Submit &raquo;" />  <br>
-          </p>
+                A few more things you should know: <br><br>
+            <textarea name="msg" id="msg" rows="10"></textarea><br><br>
+            <input type="submit" class="botao" name="submit" value="Submit &raquo;" />  <br>
+            </p>
           </form>
         </div>
-      </section>
-    </div>
-
-    <div class="footer">
-      <div class="linha">
-        <footer>
-          <div class="coluna col4 myprivacy">
-            <span class="myprivacy"><a href="privacy.html">Privacy</a></span>
-          </div>
-          <div class="coluna col4 copy">
-            <p>&copy 2019 - AJEdelmann Web Development</p>
-            <a href="https://www.instagram.com/albert_toti/" rel="external" target="_blank"><img src="img/instaicon1.png" alt="instagram" class="myinsta"></a>
-          </div>
-          <div class="coluna col4 mycv">
-            <span><a href="albert-edelmann-cv.pdf">Print a<br>resume</a></span>
-          </div>
-        </footer>
       </div>
     </div>
 
+    <div class="linha">
+      <div class="footer">
+        <footer>
+          <div class="coluna col4 mycv">
+            <span><a href="albert-edelmann-cv.pdf">Print a resume</a></span>
+            <span><a href="albert-edelmann-cv.pdf">Print a resume</a></span>
+          </div>
+          <div class="coluna col4 copy">
+              <p>&copy 2019 - AJEdelmann Web Development</p>
+              <a href="https://www.instagram.com/albert_toti/" rel="external" target="_blank"><img src="img/instaicon1.png" alt="instagram" class="myinsta"></a>
+          </div>
+          <div class="coluna col4 myprivacy">
+            <span class="myprivacy"><a href="privacy.html">Privacy policy</a></span>
+          </div>
+        </footer>
+       </div>
+      </div>
+    </div>
   </body>
 </html>
