--- a/portfolio/privacy.html
+++ b/portfolio/privacy.html
@@ -3,30 +3,33 @@
   <head>
     <meta charset="utf-8">
     <title>Portfolio - AJEdelmann</title>
+    <meta name="description" content="Data Privacy information">
+    <meta name="author" content="Albert Edelmann">
   <!--  Explicar pq utilizei o normalize -->
     <link rel="stylesheet" type="text/css" href="css/reset-normalize.css" />
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/responsive.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Open+Sans+Condensed:300|Roboto|Roboto+Condensed" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/favicon .ico" type="image/x-icon">
   </head>
   <body>
+    <div class="linha">
       <header class="header">
-        <div class="linha">
-          <div class="col12">
-            <nav>
-              <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-                <li><a href="skills.html">SKILLS</a></li>
-                <li><a href="portfolio.html">PORTFOLIO</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-              </ul>
-            </nav>
-          </div>
+        <div class="col12">
+          <nav>
+            <ul>
+              <li><a href="index.html">HOME</a></li>
+              <li><a href="about.html">ABOUT</a></li>
+              <li><a href="skills.html">SKILLS</a></li>
+              <li><a href="portfolio.html">PORTFOLIO</a></li>
+              <li><a href="contact.html">CONTACT</a></li>
+            </ul>
+          </nav>
         </div>
-      </header>
-    <hr>
+        <hr>
+     </header>
+    </div>
+
     <div class="linha" id="myprivacycontent">
       <div class="coluna col12 ">
         <h1 class="myprivacyh1">Additional information about Data Privacy</h1>
@@ -53,18 +56,18 @@
       </div>
     </div>
 
-    <div class="footer">
-      <div class="linha">
+    <div class="linha">
+     <div class="footer">
         <footer>
-          <div class="coluna col4 myprivacy">
-            <span class="myprivacy"><a href="privacy.html">Privacy</a></span>
+          <div class="coluna col4 mycv">
+            <span><a href="albert-edelmann-cv.pdf">Print a resume</a></span>
           </div>
           <div class="coluna col4 copy">
             <p>&copy 2019 - AJEdelmann Web Development</p>
             <a href="https://www.instagram.com/albert_toti/" rel="external" target="_blank"><img src="img/instaicon1.png" alt="instagram" class="myinsta"></a>
           </div>
-          <div class="coluna col4 mycv">
-            <span><a href="albert-edelmann-cv.pdf">Print a<br>resume</a></span>
+          <div class="coluna col4 myprivacy">
+            <span class="myprivacy"><a href="privacy.html">Privacy policy</a></span>
           </div>
         </footer>
       </div>
