--- a/portfolio/skills.html
+++ b/portfolio/skills.html
@@ -12,6 +12,7 @@
     <link href="css/responsive.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Open+Sans+Condensed:300|Roboto|Roboto+Condensed" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="img/favicon .ico" type="image/x-icon">
   </head>
 
   <body>
