added formspree for email

--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -59,7 +59,7 @@
       <div class="linha">
         <div class=" coluna col12">
           <h2 class="myh2contact">Send me a message</h2>
-          <form action="">
+          <form method="post" action="https://formspree.io/albert.edelmann@gmail.com">
             <p class="mybrief">Dear Albert,
             <br><br>
                 My name is <input type="text" name="firstname" class="cliententry" value="type your name"><br>
