--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -62,7 +62,7 @@
           <form method="post" action="https://formspree.io/albert.edelmann@gmail.com">
             <p class="mybrief">Dear Albert,
             <br><br>
-                My name is <input type="text" name="firstname" class="cliententry" value="type your name"><br>
+                My name is <input type="text" name="firstname" class="cliententry" placeholder="type your name"><br>
                 and I’m contacting you regarding a job<br>
                 for my
             <select name="employer" class="cliententry">
@@ -75,16 +75,16 @@
               I would love if you could
             <select name="contactme" class="cliententry">
               <option value="call me">call me</option>
-              <option value="project">send me an e-mail</option>
-              <option value="brand">come to my office</option>
-              <option value="no one, really">plan a Skype meeting</option>
-              <option value="no one, really">send me a smoke sign</option>
+              <option value="send me an e-mail">send me an e-mail</option>
+              <option value="come to my office">come to my office</option>
+              <option value="plan a Skype meeting">plan a Skype meeting</option>
+              <option value="send me a smoke sign">send me a smoke sign</option>
               </select>
             <br>
                to discuss this further. <br>
                 A few more things you should know: <br><br>
             <textarea name="msg" id="msg" rows="10"></textarea><br><br>
-            <input type="submit" class="botao" name="submit" value="Submit &raquo;" />  <br>
+            <input type="submit" class="botao" value="Submit &raquo;" />  <br>
             </p>
           </form>
         </div>
