--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="utf-8">
   <title>Portfolio - AJEdelmann</title>
@@ -10,7 +11,8 @@
   <link href="css/style.css" rel="stylesheet">
   <link href="css/responsive.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Open+Sans+Condensed:300|Roboto|Roboto+Condensed" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Open+Sans+Condensed:300|Roboto|Roboto+Condensed"
+    rel="stylesheet">
   <link rel="shortcut icon" href="img/favicon .ico" type="image/x-icon">
 </head>
 
@@ -22,7 +24,6 @@
           <ul>
             <li><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
-            <li><a href="skills.html">SKILLS</a></li>
             <li><a href="portfolio.html">PORTFOLIO</a></li>
             <li><a href="contact.html">CONTACT</a></li>
           </ul>
@@ -34,7 +35,8 @@
 
   <div class="linha home">
     <div class="coluna col4 mytext">
-      <h1 id="myname"><span>A</span>LB<span>ERT</span> J.<br><span class="edel">EDE<span class="lm">LM</span>ANN</span></h1>
+      <h1 id="myname"><span>A</span>LB<span>ERT</span> J.<br><span class="edel">EDE<span class="lm">LM</span>ANN</span>
+      </h1>
       <h2 class="mywebdev">Web Developer</h2>
       <h3 class="myberlin">based in Berlin, Germany</h3>
     </div>
@@ -51,7 +53,8 @@
         </div>
         <div class="coluna col4 copy">
           <p>&copy 2019 - AJEdelmann Web Development</p>
-          <a href="https://www.instagram.com/albert_toti/" rel="external" target="_blank"><img src="img/instaicon1.png" alt="instagram" class="myinsta"></a>
+          <a href="https://www.instagram.com/albert_toti/" rel="external" target="_blank"><img src="img/instaicon1.png"
+              alt="instagram" class="myinsta"></a>
         </div>
         <div class="coluna col4 myprivacy">
           <span class="myprivacy"><a href="privacy.html">Privacy policy</a></span>
@@ -60,4 +63,5 @@
     </div>
   </div>
 </body>
+
 </html>
